@@ -1,3 +1,10 @@
+2019-11-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCsymt.c,
+	  src/SDCCopt.c,
+	  support/regression/tests/bug-2907.c:
+	  Fix bug #2907.
+
 2019-10-25 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
